# small-giants

./: .gitignore  README.md
dspy-liquid-agent/: .gitignore  Makefile  README.md  pyproject.toml  run.py
dspy-liquid-agent/scripts/: download_sample_invoices.py
dspy-liquid-agent/src/invoice_parser_ui/: __init__.py  app.py
dspy-liquid-agent/src/invoice_parser_ui/agents/: __init__.py  invoice_agent.py
dspy-liquid-agent/src/invoice_parser_ui/common/: __init__.py  dspy_setup.py
dspy-liquid-agent/src/invoice_parser_ui/config/: agent_configs.py
granite-coder/: HANDOFF.md  IMPROVEMENTS.md  Makefile  README.md  RESPONSES.md  mcp.json  pyproject.toml
granite-coder/src/: agent.py  cli.py  server.py
granite-coder/tests/: test_agent.py
langchain-qdrant-ollama-rag/: Makefile  README.md  main.py  pyproject.toml
langchain-qdrant-ollama-rag/.report/: 001-langchain-qdrant-ollama-rag-evaluation.md
